[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["Chloe Nott <chloe@nott.email>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.6.6"
pytest-watch = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
